[project]
name = "hybrid-search-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "pinecone>=6.0.2",
    "pinecone-client>=6.0.0",
    "pinecone-notebooks>=0.1.1",
    "pinecone-text>=0.5.4",
    "python-dotenv>=1.1.0",
]
